--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "firebase": "^9.8.1",
+    "framer-motion": "^6.3.6",
     "graphql": "^16.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
